# mediasort

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
ui/: app.js  index.html  style.css
