[package]
name = "mediasort"
version = "0.1.0"
description = "Media sorting app"
authors = []
edition = "2021"

[lib]
name = "mediasort_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mediasort"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
